--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "@mui/material-nextjs": "^6.1.6",
+    "@reduxjs/toolkit": "^2.3.0",
+    "dotenv": "^16.4.5",
     "next": "^15",
     "next-auth": "^4.24.10",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "uuidv7": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "9.14.0",
