--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^15",
     "next-auth": "^4.24.10",
     "pg": "^8.13.1",
+    "postgres-range": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
